--- a/index.html
+++ b/index.html
@@ -43,13 +43,6 @@
     <path d="M14.5801 14.469C14.5801 15.132 14.7961 15.639 15.1921 16.029C15.5881 16.419 16.2721 16.692 17.1721 16.887V12.207C16.3441 12.246 15.6961 12.48 15.2641 12.831C14.7961 13.26 14.5801 13.806 14.5801 14.469Z" fill="black"/>
     </svg>
   </div>
-  <div style="width: 840px; height: 80.98px; left: 50px; top: 1606px; position: absolute">
-    <div style="width: 199.55px; height: 80.98px; left: 0px; top: 0px; position: absolute; background: #EEEEEE; border-radius: 10px; border: 2px #FF0000 solid"></div>
-    <div style="width: 199.55px; height: 80.98px; left: 640.45px; top: 0px; position: absolute; background: #EEEEEE; border-radius: 10px; border: 2px #FF0000 solid"></div>
-    <div style="width: 440.90px; height: 0px; left: 199.55px; top: 40.49px; position: absolute; outline: 1px #FF0000 solid; outline-offset: -0.50px"></div>
-    <div style="width: 199.55px; height: 61.14px; left: 320.23px; top: 9.92px; position: absolute; background: #EEEEEE; border-radius: 10px; border: 2px #FF0000 solid"></div>
-    <div style="left: 354.50px; top: 19.99px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 50px; font-family: Bebas Neue; font-weight: 400; line-height: 41px; letter-spacing: 0.40px; word-wrap: break-word">Perdida</div>
-  </div>
   <div style="left: 103px; top: 1436px; position: absolute; justify-content: flex-start; align-items: center; gap: 20px; display: inline-flex">
     <div style="width: 65px; height: 66px; position: relative; overflow: hidden">
       <div data-svg-wrapper style="left: 0.44px; top: 0.45px; position: absolute">
@@ -466,5 +459,65 @@
       <path d="M200.205 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.7046C2 78.831 4.60615 81.3654 7.82099 81.3654H200.205C203.42 81.3654 206.026 78.831 206.026 75.7046V7.66087C206.026 4.53446 203.42 2 200.205 2Z" fill="#EEEEEE" stroke="#006837" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
+  </div>
+  <div data-svg-wrapper style="left: 469.27px; top: 1607.30px; position: absolute">
+    <svg width="5" height="11" viewBox="0 0 5 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M2.15002 0V10.2084" stroke="white" stroke-width="4.3" stroke-miterlimit="10"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 464.20px; top: 1612.43px; position: absolute">
+    <svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 2.1499H10.1565" stroke="white" stroke-width="4.3" stroke-miterlimit="10"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 113.08px; top: 1606px; position: absolute">
+    <svg width="719" height="120" viewBox="0 0 719 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M712.437 2H5.72807C2.87803 2 1.06437 5.10914 2.5153 7.59645L62.2109 112.064C64.18 115.484 67.8592 117.66 71.8492 117.66H646.419C650.357 117.66 654.088 115.536 656.057 112.064L715.753 7.59645C717.152 5.10914 715.39 2 712.54 2H712.437Z" fill="#EEEEEE" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 654.48px; top: 1626.73px; position: absolute">
+    <svg width="195" height="81" viewBox="0 0 195 81" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M187.512 2H7.18191C4.32002 2 2 4.32002 2 7.18191V73.0958C2 75.9577 4.32002 78.2777 7.18191 78.2777H187.512C190.374 78.2777 192.694 75.9577 192.694 73.0958V7.18191C192.694 4.32002 190.374 2 187.512 2Z" fill="#EEEEEE" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 94.83px; top: 1629.06px; position: absolute">
+    <svg width="195" height="81" viewBox="0 0 195 81" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M187.823 2H7.18191C4.32002 2 2 4.32002 2 7.18191V73.2512C2 76.1131 4.32002 78.4331 7.18191 78.4331H187.823C190.685 78.4331 193.005 76.1131 193.005 73.2512V7.18191C193.005 4.32002 190.685 2 187.823 2Z" fill="#EEEEEE" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 364.65px; top: 1634.03px; position: absolute">
+    <svg width="28" height="60" viewBox="0 0 28 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M27.6714 14.7166V22.4377C27.6714 31.9724 23.0595 37.1543 13.7321 37.1543H9.32743V59.4883H0V0H13.7839C23.1113 0 27.7232 5.18192 27.7232 14.7166H27.6714ZM9.32743 8.55015V28.7078H13.7321C16.6857 28.7078 18.344 27.3605 18.344 23.1113V14.1984C18.344 9.94927 16.7376 8.60199 13.7321 8.60199H9.32743V8.55015Z" fill="black"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 397.09px; top: 1634.09px; position: absolute">
+    <svg width="26" height="60" viewBox="0 0 26 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M9.32743 25.0804H22.1786V33.5788H9.32743V50.9899H25.495V59.4883H0V0H25.495V8.49831H9.32743V25.0804Z" fill="black"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 428.44px; top: 1634.14px; position: absolute">
+    <svg width="30" height="60" viewBox="0 0 30 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M19.484 59.4365C18.9658 57.8819 18.6549 56.9492 18.6549 52.13V42.8026C18.6549 37.2579 16.7894 35.237 12.5402 35.237H9.32743V59.4883H0V0H14.0948C23.785 0 27.9305 4.50827 27.9305 13.6802V18.344C27.9305 24.4586 25.9613 28.4487 21.8158 30.4178C26.4795 32.3869 28.0341 36.8952 28.0341 43.0617V52.2336C28.0341 55.1355 28.1377 57.2601 29.0705 59.4365H19.5358H19.484ZM9.2756 8.4465V26.7387H12.9548C16.4266 26.7387 18.5512 25.1841 18.5512 20.4685V14.613C18.5512 10.3638 17.1003 8.49834 13.7839 8.49834H9.2756V8.4465Z" fill="black"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 462.54px; top: 1634.09px; position: absolute">
+    <svg width="29" height="60" viewBox="0 0 29 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0H14.7684C24.0959 0 28.7078 5.18189 28.7078 14.7166V44.8235C28.7078 54.3582 24.0959 59.5401 14.7684 59.5401H0V0.0518064V0ZM9.37924 8.49831V50.9899H14.6648C17.6185 50.9899 19.4322 49.4354 19.4322 45.1862V14.2502C19.4322 10.0011 17.6703 8.4465 14.6648 8.4465H9.37924V8.49831Z" fill="black"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 497.26px; top: 1634.09px; position: absolute">
+    <svg width="10" height="60" viewBox="0 0 10 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0H9.32743V59.4883H0V0Z" fill="black"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 513.42px; top: 1634.09px; position: absolute">
+    <svg width="29" height="60" viewBox="0 0 29 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0H14.7684C24.0959 0 28.7078 5.18189 28.7078 14.7166V44.8235C28.7078 54.3582 24.0959 59.5401 14.7684 59.5401H0V0.0518064V0ZM9.32743 8.49831V50.9899H14.613C17.5667 50.9899 19.3803 49.4354 19.3803 45.1862V14.2502C19.3803 10.0011 17.6185 8.4465 14.613 8.4465H9.32743V8.49831Z" fill="black"/>
+    </svg>
+  </div>
+  <div data-svg-wrapper style="left: 547.31px; top: 1633.36px; position: absolute">
+    <svg width="29" height="61" viewBox="0 0 29 61" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 14.9757C0 5.44102 5.02646 0 14.1984 0C23.3704 0 28.3969 5.44102 28.3969 14.9757V45.9117C28.3969 55.4464 23.3704 60.8874 14.1984 60.8874C5.02646 60.8874 0 55.4464 0 45.9117V14.9757ZM9.37924 46.5335C9.37924 50.7827 11.2447 52.3891 14.2502 52.3891C17.2558 52.3891 19.1213 50.7827 19.1213 46.5335V14.4057C19.1213 10.1565 17.2558 8.55015 14.2502 8.55015C11.2447 8.55015 9.37924 10.1565 9.37924 14.4057V46.5335Z" fill="black"/>
+    </svg>
   </div>
 </div>
