--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style="width: 940px; height: 1754px; position: relative; background: #EEEEEE; overflow: hidden; border-radius: 25px">
+<div style="width: 940px; height: 1754px; position: relative; background: #F5F5F5; overflow: hidden; border-radius: 25px">
   <div style="left: 187.15px; top: 45px; position: absolute; justify-content: flex-start; align-items: center; display: inline-flex">
     <div data-svg-wrapper>
       <svg width="72" height="49" viewBox="0 0 72 49" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -81,7 +81,7 @@
     </div>
     <div data-svg-wrapper style="left: 39.94px; top: 0px; position: absolute">
       <svg width="807" height="131" viewBox="0 0 807 131" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M800.062 2H6.1952C2.99366 2 0.956304 5.39653 2.58618 8.11375L69.644 122.237C71.856 125.973 75.9889 128.351 80.471 128.351H725.902C730.326 128.351 734.517 126.03 736.729 122.237L803.787 8.11375C805.359 5.39653 803.38 2 800.178 2H800.062Z" fill="#EEEEEE" stroke="#FDC00F" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M800.062 2H6.1952C2.99366 2 0.956304 5.39653 2.58618 8.11375L69.644 122.237C71.856 125.973 75.9889 128.351 80.471 128.351H725.902C730.326 128.351 734.517 126.03 736.729 122.237L803.787 8.11375C805.359 5.39653 803.38 2 800.178 2H800.062Z" fill="#F5F5F5" stroke="#FDC00F" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 305.25px; top: 37.65px; position: absolute">
@@ -146,12 +146,12 @@
     </div>
     <div data-svg-wrapper style="left: 689.79px; top: 22.64px; position: absolute">
       <svg width="219" height="88" viewBox="0 0 219 88" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M210.391 2H7.82099C4.60615 2 2 4.53446 2 7.66087V79.6672C2 82.7936 4.60615 85.3281 7.82099 85.3281H210.391C213.606 85.3281 216.212 82.7936 216.212 79.6672V7.66087C216.212 4.53446 213.606 2 210.391 2Z" fill="#EEEEEE" stroke="#FDC00F" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M210.391 2H7.82099C4.60615 2 2 4.53446 2 7.66087V79.6672C2 82.7936 4.60615 85.3281 7.82099 85.3281H210.391C213.606 85.3281 216.212 82.7936 216.212 79.6672V7.66087C216.212 4.53446 213.606 2 210.391 2Z" fill="#F5F5F5" stroke="#FDC00F" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 0px; top: 25.19px; position: absolute">
       <svg width="219" height="88" viewBox="0 0 219 88" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M210.741 2H7.82099C4.60615 2 2 4.53446 2 7.66087V79.837C2 82.9634 4.60615 85.4979 7.82099 85.4979H210.741C213.956 85.4979 216.562 82.9634 216.562 79.837V7.66087C216.562 4.53446 213.956 2 210.741 2Z" fill="#EEEEEE" stroke="#FDC00F" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M210.741 2H7.82099C4.60615 2 2 4.53446 2 7.66087V79.837C2 82.9634 4.60615 85.4979 7.82099 85.4979H210.741C213.956 85.4979 216.562 82.9634 216.562 79.837V7.66087C216.562 4.53446 213.956 2 210.741 2Z" fill="#F5F5F5" stroke="#FDC00F" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 452px; top: 364.56px; position: absolute">
@@ -201,7 +201,7 @@
     </div>
     <div data-svg-wrapper style="left: 134.07px; top: 239.12px; position: absolute">
       <svg width="641" height="131" viewBox="0 0 641 131" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M634.047 2H6.1952C2.99366 2 0.956304 5.39654 2.58618 8.11376L69.5276 122.067C71.7395 125.803 75.8724 128.181 80.2964 128.181H559.888C564.312 128.181 568.445 125.86 570.657 122.067L637.598 8.11376C639.17 5.39654 637.191 2 633.989 2H634.047Z" fill="#EEEEEE" stroke="#E75E07" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M634.047 2H6.1952C2.99366 2 0.956304 5.39653 2.58618 8.11375L69.5276 122.067C71.7395 125.803 75.8724 128.181 80.2964 128.181H559.888C564.312 128.181 568.445 125.86 570.657 122.067L637.598 8.11375C639.17 5.39653 637.191 2 633.989 2H634.047Z" fill="#F5F5F5" stroke="#E75E07" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 347.75px; top: 277.16px; position: absolute">
@@ -246,17 +246,17 @@
     </div>
     <div data-svg-wrapper style="left: 630.47px; top: 260.51px; position: absolute">
       <svg width="219" height="88" viewBox="0 0 219 88" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M210.391 2H7.82099C4.60615 2 2 4.53446 2 7.66087V79.6672C2 82.7936 4.60615 85.3281 7.82099 85.3281H210.391C213.606 85.3281 216.212 82.7936 216.212 79.6672V7.66087C216.212 4.53446 213.606 2 210.391 2Z" fill="#EEEEEE" stroke="#E75E07" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M210.391 2H7.82099C4.60615 2 2 4.53446 2 7.66087V79.6672C2 82.7936 4.60615 85.3281 7.82099 85.3281H210.391C213.606 85.3281 216.212 82.7936 216.212 79.6672V7.66087C216.212 4.53446 213.606 2 210.391 2Z" fill="#F5F5F5" stroke="#E75E07" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 59.26px; top: 260.40px; position: absolute">
       <svg width="219" height="88" viewBox="0 0 219 88" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M210.741 2H7.82099C4.60615 2 2 4.53446 2 7.66087V79.837C2 82.9634 4.60615 85.4979 7.82099 85.4979H210.741C213.956 85.4979 216.562 82.9634 216.562 79.837V7.66087C216.562 4.53446 213.956 2 210.741 2Z" fill="#EEEEEE" stroke="#E75E07" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M210.741 2H7.82099C4.60615 2 2 4.53446 2 7.66087V79.837C2 82.9634 4.60615 85.4979 7.82099 85.4979H210.741C213.956 85.4979 216.562 82.9634 216.562 79.837V7.66087C216.562 4.53446 213.956 2 210.741 2Z" fill="#F5F5F5" stroke="#E75E07" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 216.43px; top: 478.12px; position: absolute">
       <svg width="476" height="131" viewBox="0 0 476 131" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M469.313 2H6.1952C2.99366 2 0.956304 5.39655 2.58618 8.11377L69.5276 122.067C71.7396 125.803 75.8725 128.181 80.2964 128.181H395.212C399.636 128.181 403.769 125.86 405.981 122.067L472.922 8.11377C474.494 5.39655 472.515 2 469.313 2Z" fill="#EEEEEE" stroke="#29ABE2" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M469.313 2H6.1952C2.99366 2 0.956304 5.39655 2.58618 8.11377L69.5276 122.067C71.7396 125.803 75.8725 128.181 80.2964 128.181H395.212C399.636 128.181 403.769 125.86 405.981 122.067L472.922 8.11377C474.494 5.39655 472.515 2 469.313 2Z" fill="#F5F5F5" stroke="#29ABE2" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 389.66px; top: 505.35px; position: absolute">
@@ -346,17 +346,17 @@
     </div>
     <div data-svg-wrapper style="left: 577.50px; top: 501.55px; position: absolute">
       <svg width="208" height="84" viewBox="0 0 208 84" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M199.797 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.5914C2 78.7178 4.60615 81.2522 7.82099 81.2522H199.797C203.012 81.2522 205.618 78.7178 205.618 75.5914V7.66087C205.618 4.53446 203.012 2 199.797 2Z" fill="#EEEEEE" stroke="#29ABE2" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M199.797 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.5914C2 78.7178 4.60615 81.2522 7.82099 81.2522H199.797C203.012 81.2522 205.618 78.7178 205.618 75.5914V7.66087C205.618 4.53446 203.012 2 199.797 2Z" fill="#F5F5F5" stroke="#29ABE2" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 122.82px; top: 501.50px; position: absolute">
       <svg width="209" height="84" viewBox="0 0 209 84" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M200.205 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.7046C2 78.831 4.60615 81.3654 7.82099 81.3654H200.205C203.42 81.3654 206.026 78.831 206.026 75.7046V7.66087C206.026 4.53446 203.42 2 200.205 2Z" fill="#EEEEEE" stroke="#29ABE2" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M200.205 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.7046C2 78.831 4.60615 81.3654 7.82099 81.3654H200.205C203.42 81.3654 206.026 78.831 206.026 75.7046V7.66087C206.026 4.53446 203.42 2 200.205 2Z" fill="#F5F5F5" stroke="#29ABE2" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 298.80px; top: 717.12px; position: absolute">
       <svg width="311" height="131" viewBox="0 0 311 131" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M304.637 2H6.1952C2.99366 2 0.956304 5.39648 2.58618 8.1137L69.5276 122.067C71.7395 125.803 75.8724 128.181 80.2964 128.181H230.536C234.96 128.181 239.093 125.86 241.305 122.067L308.246 8.1137C309.818 5.39648 307.839 2 304.637 2Z" fill="#EEEEEE" stroke="#8CC63F" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M304.637 2H6.1952C2.99366 2 0.956304 5.39648 2.58618 8.1137L69.5276 122.067C71.7395 125.803 75.8724 128.181 80.2964 128.181H230.536C234.96 128.181 239.093 125.86 241.305 122.067L308.246 8.1137C309.818 5.39648 307.839 2 304.637 2Z" fill="#F5F5F5" stroke="#8CC63F" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 384.01px; top: 767.90px; position: absolute">
@@ -411,17 +411,17 @@
     </div>
     <div data-svg-wrapper style="left: 557.83px; top: 740.56px; position: absolute">
       <svg width="208" height="84" viewBox="0 0 208 84" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M199.797 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.5914C2 78.7178 4.60615 81.2522 7.82099 81.2522H199.797C203.012 81.2522 205.618 78.7178 205.618 75.5914V7.66087C205.618 4.53446 203.012 2 199.797 2Z" fill="#EEEEEE" stroke="#8CC63F" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M199.797 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.5914C2 78.7178 4.60615 81.2522 7.82099 81.2522H199.797C203.012 81.2522 205.618 78.7178 205.618 75.5914V7.66087C205.618 4.53446 203.012 2 199.797 2Z" fill="#F5F5F5" stroke="#8CC63F" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 142.50px; top: 740.50px; position: absolute">
       <svg width="209" height="84" viewBox="0 0 209 84" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M200.205 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.7046C2 78.831 4.60615 81.3655 7.82099 81.3655H200.205C203.42 81.3655 206.026 78.831 206.026 75.7046V7.66087C206.026 4.53446 203.42 2 200.205 2Z" fill="#EEEEEE" stroke="#8CC63F" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M200.205 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.7046C2 78.831 4.60615 81.3655 7.82099 81.3655H200.205C203.42 81.3655 206.026 78.831 206.026 75.7046V7.66087C206.026 4.53446 203.42 2 200.205 2Z" fill="#F5F5F5" stroke="#8CC63F" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 381.05px; top: 952.90px; position: absolute">
       <svg width="147" height="127" viewBox="0 0 147 127" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M140.02 2H6.19532C2.99378 2 0.956426 5.39648 2.5863 8.1137L69.5277 122.067C70.3427 123.426 71.7397 124.105 73.0785 124.105C74.4174 124.105 75.8726 123.426 76.6293 122.067L143.571 8.1137C145.142 5.39648 143.163 2 139.962 2H140.02Z" fill="#EEEEEE" stroke="#006837" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M140.02 2H6.19532C2.99378 2 0.956426 5.39648 2.5863 8.1137L69.5277 122.067C70.3427 123.426 71.7397 124.105 73.0785 124.105C74.4174 124.105 75.8726 123.426 76.6293 122.067L143.571 8.1137C145.142 5.39648 143.163 2 139.962 2H140.02Z" fill="#F5F5F5" stroke="#006837" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 421.79px; top: 975.37px; position: absolute">
@@ -451,12 +451,12 @@
     </div>
     <div data-svg-wrapper style="left: 502.06px; top: 974.29px; position: absolute">
       <svg width="208" height="84" viewBox="0 0 208 84" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M199.797 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.5914C2 78.7178 4.60615 81.2522 7.82099 81.2522H199.797C203.012 81.2522 205.618 78.7178 205.618 75.5914V7.66087C205.618 4.53446 203.012 2 199.797 2Z" fill="#EEEEEE" stroke="#006837" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M199.797 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.5914C2 78.7178 4.60615 81.2522 7.82099 81.2522H199.797C203.012 81.2522 205.618 78.7178 205.618 75.5914V7.66087C205.618 4.53446 203.012 2 199.797 2Z" fill="#F5F5F5" stroke="#006837" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
     <div data-svg-wrapper style="left: 198.26px; top: 974.24px; position: absolute">
       <svg width="209" height="84" viewBox="0 0 209 84" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M200.205 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.7046C2 78.831 4.60615 81.3654 7.82099 81.3654H200.205C203.42 81.3654 206.026 78.831 206.026 75.7046V7.66087C206.026 4.53446 203.42 2 200.205 2Z" fill="#EEEEEE" stroke="#006837" stroke-width="4" stroke-miterlimit="10"/>
+      <path d="M200.205 2H7.82099C4.60615 2 2 4.53446 2 7.66087V75.7046C2 78.831 4.60615 81.3654 7.82099 81.3654H200.205C203.42 81.3654 206.026 78.831 206.026 75.7046V7.66087C206.026 4.53446 203.42 2 200.205 2Z" fill="#F5F5F5" stroke="#006837" stroke-width="4" stroke-miterlimit="10"/>
       </svg>
     </div>
   </div>
@@ -472,17 +472,17 @@
   </div>
   <div data-svg-wrapper style="left: 113.08px; top: 1606px; position: absolute">
     <svg width="719" height="120" viewBox="0 0 719 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M712.437 2H5.72807C2.87803 2 1.06437 5.10914 2.5153 7.59645L62.2109 112.064C64.18 115.484 67.8592 117.66 71.8492 117.66H646.419C650.357 117.66 654.088 115.536 656.057 112.064L715.753 7.59645C717.152 5.10914 715.39 2 712.54 2H712.437Z" fill="#EEEEEE" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
+    <path d="M712.437 2H5.72807C2.87803 2 1.06437 5.10914 2.5153 7.59645L62.2109 112.064C64.18 115.484 67.8592 117.66 71.8492 117.66H646.419C650.357 117.66 654.088 115.536 656.057 112.064L715.753 7.59645C717.152 5.10914 715.39 2 712.54 2H712.437Z" fill="#F5F5F5" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
     </svg>
   </div>
   <div data-svg-wrapper style="left: 654.48px; top: 1626.73px; position: absolute">
     <svg width="195" height="81" viewBox="0 0 195 81" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M187.512 2H7.18191C4.32002 2 2 4.32002 2 7.18191V73.0958C2 75.9577 4.32002 78.2777 7.18191 78.2777H187.512C190.374 78.2777 192.694 75.9577 192.694 73.0958V7.18191C192.694 4.32002 190.374 2 187.512 2Z" fill="#EEEEEE" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
+    <path d="M187.512 2H7.18191C4.32002 2 2 4.32002 2 7.18191V73.0958C2 75.9577 4.32002 78.2777 7.18191 78.2777H187.512C190.374 78.2777 192.694 75.9577 192.694 73.0958V7.18191C192.694 4.32002 190.374 2 187.512 2Z" fill="#F5F5F5" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
     </svg>
   </div>
   <div data-svg-wrapper style="left: 94.83px; top: 1629.06px; position: absolute">
     <svg width="195" height="81" viewBox="0 0 195 81" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M187.823 2H7.18191C4.32002 2 2 4.32002 2 7.18191V73.2512C2 76.1131 4.32002 78.4331 7.18191 78.4331H187.823C190.685 78.4331 193.005 76.1131 193.005 73.2512V7.18191C193.005 4.32002 190.685 2 187.823 2Z" fill="#EEEEEE" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
+    <path d="M187.823 2H7.18191C4.32002 2 2 4.32002 2 7.18191V73.2512C2 76.1131 4.32002 78.4331 7.18191 78.4331H187.823C190.685 78.4331 193.005 76.1131 193.005 73.2512V7.18191C193.005 4.32002 190.685 2 187.823 2Z" fill="#F5F5F5" stroke="#FF0000" stroke-width="4" stroke-miterlimit="10"/>
     </svg>
   </div>
   <div data-svg-wrapper style="left: 364.65px; top: 1634.03px; position: absolute">
